--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,22 @@
 # Core dependencies
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
-
-# Audio processing
-pyaudio==0.2.11
-numpy==1.24.3
-librosa==0.10.1
-soundfile==0.12.1
-webrtcvad==2.0.10
+aiofiles==23.2.1
 
 # AI/ML models
-torch==2.1.0
-torchaudio==2.1.0
 transformers==4.35.2
-faster-whisper==0.9.0
+faster-whisper>=0.10.0
 sentence-transformers==2.2.2
+whisperx==3.1.1
 
 # LiveKit integration
-livekit-client==0.12.0
-livekit-server-sdk==0.12.0
+livekit==0.12.0
 
 # Speech processing
-silero-vad==4.0.0
-opensmile==2.4.1
-parselmouth==0.4.3
+silero-vad==5.1.2
+praat-parselmouth==0.4.3
 
 # Text processing
 spacy==3.7.2
@@ -34,7 +25,6 @@ textblob==0.17.1
 
 # Async and utilities
 asyncio-mqtt==0.13.0
-aiofiles==23.2.1
 python-dotenv==1.0.0
 
 # TTS dependencies
